update: correction buttonTop z-index + add class mobileLink on FR index page, was missing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -718,7 +718,7 @@ transform: translateY(-8px) rotate(-45deg);
   font-size: 1.5rem;
   cursor: pointer;
   display: none; /* Cache le bouton par défaut */
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Style du bouton revenir en haut au survol */
